--- a/index.html
+++ b/index.html
@@ -30,81 +30,6 @@
 </a>
 </div>
 
-<style> 
-.s1 {
-  animation:infinite;
-  animation-name: float;
-  animation-duration: 4.4s;
-  margin-top:-200px;
-  margin-bottom:-200px;
-  transition: transform .2s;
-  margin: 0 auto;
-  animation-delay: 0s;
-}
-
-.s2 {
-    animation:infinite;
-  animation-name: float;
-  animation-duration: 4.8s;
-  margin-top:-200px;
-  margin-bottom:-200px;
-  transition: transform .2s;
-  margin: 0 auto;
-   animation-delay: 1.5s;
-}
-
-.s3 {
-    animation:infinite;
-  animation-name: float;
-  animation-duration: 4.9s;
-  margin-top:-200px;
-  margin-bottom:-200px;
-  transition: transform .2s;
-  margin: 0 auto;
-   animation-delay: 3s;
-}
-
-.s4 {
-    animation:infinite;
-  animation-name: float;
-  animation-duration: 4.6s;
-  margin-top:-200px;
-  margin-bottom:-200px;
-  transition: transform .2s;
-  margin: 0 auto;
-   animation-delay: 4.5s;
-}
-
-.s5 {
-    animation:infinite;
-  animation-name: float;
-  animation-duration: 4.7s;
-  margin-top:-200px;
-  margin-bottom:-200px;
-  transition: transform .2s;
-  margin: 0 auto;
-   animation-delay: 5.5s;
-}
-
-@keyframes float {
-  0% {
-    transform: translatey(0px);
-  }
-  25% {
-    transform: translatey(-20px);
-  }
-  50% {
-    transform: translatey(0px);
-  }
-  75% {
-  transform: translatey(-20px);
-  }
-  100%{
-    transform: translatey(0px);
-  }
-
-</style>
-
 <div class="s2">
 <a href="1.html" >a station further on
 </a>
@@ -125,61 +50,135 @@
 </a>
 </div>
 
-<style>
-    body
-    {
-         font-family: 'Rajdhani', sans-serif;
-    }
-    .modal
-    {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        padding-top: 350px;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: black;
-
-    }
-    .modal-content
-    {
-        background-color: black;
-        margin: auto;
-        padding: 20px;
-        border: 1px solid #888;
-        width: 80%;
-    }
-    .close
-    {
-        background-color: black;
-        color: #FFF;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-    }
-    .close:hover, .close:focus
-    {
-        background-color: black;
-        color: #FFF;
-        text-decoration: none;
-        cursor: pointer;
-    }
-</style>
 <button id="myBtn"><h3>☯︎</h3></button>
 <div id="myModal" class="modal">
 
 
-  <div class="modal-content">
+<div class="modal-content">
     <span class="close">&times;</span>
     <p>Finish the main story line and <a href="5.html" >unlock the puzzle</a>
 </a></p>
   </div>
 
-<script>
+<style>
+  @media only screen and (max-width: 450px)
+    {
+p{
+  font-family: 'Rajdhani', sans-serif;
+  color:white;
+  text-align:center;
+  font-size:1.4rem;
+}
 
+.modal
+    {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        padding-top: 250px;
+    }
+
+.s1{
+  text-align:center;
+  position: absolute;
+  top: 30%;
+  left: 1%;
+  animation-name: float;
+  animation-duration: 3s;
+  margin-top:-200px;
+  margin-bottom:-200px;
+  transition: transform .2s;
+  margin: 0 auto;
+  animation-delay: 0s;
+}
+
+.s2{
+  position: absolute;
+  top: 47%;
+  left: 20%;
+  animation-name: float;
+  animation-duration: 3s;
+  margin-top:-200px;
+  margin-bottom:-200px;
+  transition: transform .2s;
+  margin: 0 auto;
+   animation-delay: 1s;
+}
+
+.s3{
+  position: absolute;
+  top: 58%;
+  left: 14%;
+  animation-name: float;
+  animation-duration: 3s;
+  margin-top:-200px;
+  margin-bottom:-200px;
+  transition: transform .2s;
+  margin: 0 auto;
+   animation-delay: 2s;
+}
+
+.s4{
+  position: absolute;
+  top: 70%;
+  left: 16%;
+  animation-name: float;
+  animation-duration: 3s;
+  margin-top:-200px;
+  margin-bottom:-200px;
+  transition: transform .2s;
+  margin: 0 auto;
+   animation-delay: 3s;
+}
+
+.s5{
+  position: absolute;
+  top: 80%;
+  left: 16%;
+  animation-name: float;
+  animation-duration: 3s;
+  margin-top:-200px;
+  margin-bottom:-200px;
+  transition: transform .2s;
+  margin: 0 auto;
+   animation-delay: 4s;
+}
+
+#myBtn{
+  color:lightgrey;
+  font-size:2rem;
+  position: absolute;
+  top: 5%;
+  left: 45%;
+  text-align:center;
+  background-color:transparent;
+  border:none;
+}
+
+@keyframes float {
+  0% {
+    transform: translatey(0px);
+  }
+  25% {
+    transform: translatey(7px);
+  }
+  50% {
+    transform: translatey(0px);
+  }
+  }
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
+</style>
+
+<script>
     var modal = document.getElementById("myModal");
 
 
@@ -205,7 +204,7 @@
         }
     }
 </script>
-
 </body>
+
 
 </html>
