--- a/5.html
+++ b/5.html
@@ -53,9 +53,6 @@
 
       "Here is the Labyrinth," Albert said, pointing to a tall, laquered writing cabinet.<br>
   </br>
-
-      "An ivory labyrinth?" I exclaimed. "A tiny labyrinth indeed . . . !"<br>
-  </br>
    
       "A symbolic labyrinth," he corrected me. "An invisible labyrinth of time. No one realized that the book and the labyrinth were one and the same.<br>
   </br>
@@ -64,7 +61,7 @@
        The Pavilion of the Limpid Sun was set in the middle of an intricate garden. This may have suggested the idea of a physical maze."<br>
   </br>
 
-       The Garden of Forking Paths was the chaotic novel itself. The phrase 'to various future times, but not to all' suggested the image of bifurcating in time, not in space. Rereading the whole work confirmed this theory. In all fiction, when a man is faced with alternatives he chooses one at the expense of the others. In the almost unfathomable Ts'ui Pen, he chooses - simultaneously - all of them. He thus creates various futures, various times which start others that will in their turn branch out and bifurcate in other times. This is the cause of the contradictions in the novel.<br>
+       The Garden of Forking Paths was the chaotic novel itself. The phrase 'to various future times, but not to all' suggested the image of bifurcating in time, not in space. In all fiction, when a man is faced with alternatives he chooses one at the expense of the others. In the almost unfathomable Ts'ui Pen, he chooses - simultaneously - all of them. He thus creates various futures, various times which start others that will in their turn branch out and bifurcate in other times. This is the cause of the contradictions in the novel.<br>
   </br>
 </p>
 
@@ -86,7 +83,7 @@
      His countenance, in the bright circle of lamplight, was certainly that of an ancient, but it shone with something unyielding, even immortal.<br>
   </br>
 
-      With slow precision, he read two versions of the same epic chapter.<br>
+      The Garden of Forking Paths is an enormous guessing game, or parable, in which the subject is time. The rules of the game forbid the use of the word itself. <br>
   </br>
 
     </p>
@@ -96,7 +93,7 @@
 <section class="gradient2">
   <div class="animation">
     <div class="slide-up box">
-      <p>"The Garden of Forking Paths is an enormous guessing game, or parable, in which the subject is time. The rules of the game forbid the use of the word itself. To eliminate a word completely, to refer to it by means of inept phrases and obvious paraphrases, is perhaps the best way of drawing attention to it. This, then, is the tortuous method of approach preferred by the oblique Ts'ui Pen in every meandering of his interminable novel. </br>
+      <p>To eliminate a word completely, to refer to it by means of inept phrases and obvious paraphrases, is perhaps the best way of drawing attention to it. This, then, is the tortuous method of approach preferred by the oblique Ts'ui Pen in every meandering of his interminable novel. </br>
  </br>
 
        The Garden of Forking Paths is a picture, incomplete yet not false, of the universe such as Ts'ui Pen conceived it to be. Differing from Newton and Schopenhauer, your ancestor did not think of time as absolute and uniform. He believed in an infinite series of times, in a dizzily growing, ever spreading network of diverging, converging and parallel times. This web of time - the strands of which approach one another, bifurcate, intersect or ignore each other through the centuries - embraces every possibility. We do not exist in most of them. </br>
