--- a/5.html
+++ b/5.html
@@ -61,7 +61,7 @@
        The Pavilion of the Limpid Sun was set in the middle of an intricate garden. This may have suggested the idea of a physical maze."<br>
   </br>
 
-       The Garden of Forking Paths was the chaotic novel itself. The phrase 'to various future times, but not to all' suggested the image of bifurcating in time, not in space. In all fiction, when a man is faced with alternatives he chooses one at the expense of the others. In the almost unfathomable Ts'ui Pen, he chooses - simultaneously - all of them. He thus creates various futures, various times which start others that will in their turn branch out and bifurcate in other times. This is the cause of the contradictions in the novel.<br>
+       The Garden of Forking Paths was the chaotic novel itself. The phrase 'to various future times, but not to all' suggested the image of bifurcating in time, not in space. In all fiction, when a man is faced with alternatives he chooses one at the expense of the others. In the almost unfathomable Ts'ui Pen, he chooses - all of them. He thus creates various futures, various times which start others that will in their turn branch out and bifurcate in other times. .<br>
   </br>
 </p>
 
