--- a/5.html
+++ b/5.html
@@ -26,6 +26,7 @@
 
 <body>
 
+<section class="gradient1">
   <div class="animation">
     <div class="slide-up box">
     <p>We sat down, I upon a large, low divan, he with his back to the window and to a large circular clock. I calculated that my pursuer, Richard Madden, could not arrive in less than an hour. My irrevocable decision could wait.<br>
@@ -44,6 +45,7 @@
   </div>
 </section>
 
+<section class="gradient2">
   <div class="animation">
     <div class="slide-up box">
       <p> I examined it once upon a time: the hero dies in the third chapter, while in the fourth he is alive. As for that other enterprise of Ts'ui Pen . . . his Labyrinth . . ."<br>
@@ -59,7 +61,7 @@
        The Pavilion of the Limpid Sun was set in the middle of an intricate garden. This may have suggested the idea of a physical maze."<br>
   </br>
 
-       The Garden of Forking Paths was the chaotic novel itself. The phrase 'to various future times, but not to all' suggested the image of bifurcating in time, not in space. In all fiction, when a man is faced with alternatives he chooses one at the expense of the others. In the almost unfathomable Ts'ui Pen, he chooses - all of them. He thus creates various futures, various times which start others that will in their turn branch out and bifurcate in other times. .<br>
+       The Garden of Forking Paths was the chaotic novel itself. The phrase 'to various future times, but not to all' suggested the image of bifurcating in time, not in space. In all fiction, when a man is faced with alternatives he chooses one at the expense of the others. In the almost unfathomable Ts'ui Pen, he chooses - simultaneously - all of them. He thus creates various futures, various times which start others that will in their turn branch out and bifurcate in other times. .<br>
   </br>
 </p>
 
