--- a/5.html
+++ b/5.html
@@ -18,8 +18,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Rajdhani&family=Rubik&display=swap" rel="stylesheet">  
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/5.css">
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -103,7 +101,7 @@
  </br>
 
     </div>
-  </div
+  </div>
 </section>
 
 </body>
