--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
 </a>
 </div>
 
+<div class="alert">
+  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+  <p>Explore main story line and click → </p>
+</div>
+
+<div id="popLayer">
+</div>
+
 <button id="myBtn"><h3>☯︎</h3></button>
 <div id="myModal" class="modal">
 
@@ -59,6 +67,36 @@
     <p>Finish the main story line and <a href="5.html" >unlock the puzzle</a>
 </a></p>
   </div>
+
+<style>
+.alert {
+  display:block;
+  padding: 20px;
+  width:15rem;
+  height:6rem;
+  background-color: #7c7c7c;
+  color: white;
+  text-align:center;
+  position:absolute;
+  left:72%;
+  border:solid white 1px;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
+</style>
 
 <style>
   @media only screen and (max-width: 450px)
@@ -81,7 +119,7 @@ p{
 .s1{
   text-align:center;
   position: absolute;
-  top: 30%;
+  top: 31%;
   left: 1%;
   animation-name: float;
   animation-duration: 3s;
@@ -155,6 +193,21 @@ p{
   border:none;
 }
 
+.alert {
+  margin-top:1rem;
+  display:block;
+  padding: 20px;
+  width:11rem;
+  height:7rem;
+  background-color: #7c7c7c;
+  color: white;
+  text-align:center;
+  position:absolute;
+  border:solid white 1px;
+  top:0%;
+  left:2%;
+}
+
 @keyframes float {
   0% {
     transform: translatey(0px);
@@ -177,6 +230,8 @@ p{
 }
 
 </style>
+
+<body>
 
 <script>
     var modal = document.getElementById("myModal");
@@ -203,7 +258,10 @@ p{
             modal.style.display = "none";
         }
     }
+
 </script>
+
+
 </body>
 
 
